--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -8,8 +8,7 @@
         android:id="@+id/edt_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Book Title"
-        android:inputType="text"/>
+        android:hint="Book Title"/>
 
     <EditText
         android:id="@+id/edt_author"
